--- a/index.html
+++ b/index.html
@@ -304,6 +304,221 @@
       </div>
     </div>
 
+    <div class="bg-[#000000]">
+      <div class="container py-[140px]">
+        <h2
+          class="font-bold text-[64px] leading-[76.03px] text-center text-[#FFFFFF]"
+        >
+          Get your best deal
+        </h2>
+        <div class="flex items-center gap-6 justify-center py-10">
+          <span
+            class="font-medium text-[24px] leading-[29.05px] text-left text-[#FFFFFF]"
+            >Monthly</span
+          >
+          <img src="./images/Group 427321656.png" alt="" />
+          <span
+            class="font-medium text-[24px] leading-[29.05px] text-left text-[#F5F5F5]"
+            >Yearly</span
+          >
+        </div>
+
+        <div
+          class="grid grid-cols-1 tablet:grid-cols-3 place-items-center gap-5 py-10"
+        >
+          <div
+            class="w-[360px] h-[640px] rounded-[16px] bg-[#FAFAFA] flex flex-col pl-8 transition duration-300 hover:bg-[#A8FF35] justify-center"
+          >
+            <h3
+              class="font-normal text-[36px] leading-[36px] text-left text-[#000000] py-8 px-0"
+            >
+              Personal
+            </h3>
+            <p
+              class="text-[18px] font-normal leading-[18px] text-left text-[#000000]"
+            >
+              Special first packet for all
+            </p>
+            <div class="flex gap-2 items-center">
+              <h2
+                class="text-[64px] font-normal leading-[64px] text-left text-[#000000] py-8"
+              >
+                $8
+              </h2>
+              <p class="text-[18px] font-normal leading-[18px] text-left">
+                <sub>/Month</sub>
+              </p>
+            </div>
+            <div class="flex gap-2 items-center py-7">
+              <img src="./images/Frame 29.svg" alt="" />
+              <p>Up to 5 page each group</p>
+            </div>
+            <div class="flex gap-2 items-center py-7">
+              <img src="./images/Frame 29.svg" alt="" />
+              <p>Up to 5 page each group</p>
+            </div>
+            <div class="flex gap-2 items-center py-7">
+              <img src="./images/Frame 29.svg" alt="" />
+              <p>Up to 5 page each group</p>
+            </div>
+            <button
+              class="w-[296px] h-[58px] bg-[#A8FF35] rounded-[29px] border-2 border-transparent transition-all duration-300 hover:bg-[#000000] hover:text-[#FFFFFF]"
+            >
+              Start Free Trial
+            </button>
+          </div>
+
+          <div
+            class="w-[360px] h-[640px] rounded-[16px] bg-[#FAFAFA] flex flex-col pl-8 transition duration-300 hover:bg-[#A8FF35] justify-center"
+          >
+            <h3
+              class="font-normal text-[36px] leading-[36px] text-left text-[#000000] py-8 px-0"
+            >
+              Personal
+            </h3>
+            <p
+              class="text-[18px] font-normal leading-[18px] text-left text-[#000000]"
+            >
+              Special first packet for all
+            </p>
+            <div class="flex gap-2 items-center">
+              <h2
+                class="text-[64px] font-normal leading-[64px] text-left text-[#000000] py-8"
+              >
+                $8
+              </h2>
+              <p class="text-[18px] font-normal leading-[18px] text-left">
+                <sub>/Month</sub>
+              </p>
+            </div>
+            <div class="flex gap-2 items-center py-7">
+              <img src="./images/Frame 29.svg" alt="" />
+              <p>Up to 5 page each group</p>
+            </div>
+            <div class="flex gap-2 items-center py-7">
+              <img src="./images/Frame 29.svg" alt="" />
+              <p>Up to 5 page each group</p>
+            </div>
+            <div class="flex gap-2 items-center py-7">
+              <img src="./images/Frame 29.svg" alt="" />
+              <p>Up to 5 page each group</p>
+            </div>
+            <button
+              class="w-[296px] h-[58px] bg-[#A8FF35] rounded-[29px] border-2 border-transparent transition-all duration-300 hover:bg-[#000000] hover:text-[#FFFFFF]"
+            >
+              Start Free Trial
+            </button>
+          </div>
+
+          <div
+            class="w-[360px] h-[640px] rounded-[16px] bg-[#FAFAFA] flex flex-col pl-8 transition duration-300 hover:bg-[#A8FF35] justify-center"
+          >
+            <h3
+              class="font-normal text-[36px] leading-[36px] text-left text-[#000000] py-8 px-0"
+            >
+              Personal
+            </h3>
+            <p
+              class="text-[18px] font-normal leading-[18px] text-left text-[#000000]"
+            >
+              Special first packet for all
+            </p>
+            <div class="flex gap-2 items-center">
+              <h2
+                class="text-[64px] font-normal leading-[64px] text-left text-[#000000] py-8"
+              >
+                $8
+              </h2>
+              <p class="text-[18px] font-normal leading-[18px] text-left">
+                <sub>/Month</sub>
+              </p>
+            </div>
+            <div class="flex gap-2 items-center py-7">
+              <img src="./images/Frame 29.svg" alt="" />
+              <p>Up to 5 page each group</p>
+            </div>
+            <div class="flex gap-2 items-center py-7">
+              <img src="./images/Frame 29.svg" alt="" />
+              <p>Up to 5 page each group</p>
+            </div>
+            <div class="flex gap-2 items-center py-7">
+              <img src="./images/Frame 29.svg" alt="" />
+              <p>Up to 5 page each group</p>
+            </div>
+            <button
+              class="w-[296px] h-[58px] bg-[#A8FF35] rounded-[29px] border-2 border-transparent transition-all duration-300 hover:bg-[#000000] hover:text-[#FFFFFF]"
+            >
+              Start Free Trial
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="bg-[#A8FF35]">
+      <div
+        class="container flex flex-col justify-center items-center py-[140px]"
+      >
+        <h2
+          class="text-[35px] tablet:text-[72px] font-black leading-[80.64px] text-center text-[#000000]"
+        >
+          Join us on email for
+        </h2>
+        <h2
+          class="text-[35px] tablet:text-[72px] font-extrabold leading-[80.64px] text-center text-[#87D322]"
+        >
+          more trending topics
+        </h2>
+        <div class="py-10">
+          <button
+            class="text-[#FFFFFF] bg-[#000000] w-[180px] h-[57px] p-[16px_32px] gap-2 rounded-[40px] text-[18px] font-bold leading-[25.2px] text-center"
+          >
+            Join Now
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="container flex-col flex items-center justify-center tablet:flex-row tablet:justify-between">
+        <div class="py-10">
+          <img src="./images/Frame (4).svg" alt="" />
+        </div>
+        <div>
+          <ul class="text-center gap-10 tablet:flex">
+            <li class="py-10">
+              <a
+                class="text-[18px] font-normal leading-[18px] text-center text-[#000000]"
+                href="#"
+                >Privacy Policy</a
+              >
+            </li>
+            <li class="py-10">
+              <a
+                class="text-[18px] font-normal leading-[18px] text-center text-[#000000]"
+                href="#"
+                >Terms and Conditions</a
+              >
+            </li>
+            <li class="py-10">
+              <a
+                class="text-[18px] font-normal leading-[18px] text-center text-[#000000]"
+                href="#"
+                >Contact Us</a
+              >
+            </li>
+            <li class="py-10">
+              <a
+                class="text-[18px] font-normal leading-[18px] text-center text-[#000000]"
+                href="#"
+                >Careers</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <script>
       function toggleMenu() {
         const menuContent = document.getElementById("menu-content");
